--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -1,82 +1,68 @@
-<div>
-  <h2 id="page-heading" data-cy="PonudeHeading">
-    <span jhiTranslate="tenderiApp.ponude.home.title">Ponudes</span>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="tenderiApp.ponude.home.refreshListLabel">Refresh List</span>
-      </button>
-      <button mat-raised-button color="accent">Accent</button>
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-ponude"
-        [routerLink]="['/ponude/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="tenderiApp.ponude.home.createLabel"> Create a new Ponude </span>
-      </button>
-    </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="ponudes?.length === 0">
-    <span jhiTranslate="tenderiApp.ponude.home.notFound">No ponudes found</span>
+<button mat-raised-button (click)="exporter.exportTable('xlsx', { fileName: 'Ponude', sheet: 'sheet_name', Props: { Author: 'Talha' } })">
+  <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
+</button>
+<div class="example-container mat-elevation-z8">
+  <div>
+    <mat-form-field fxFlex="40%">
+      <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+    </mat-form-field>
   </div>
 
-  <div class="table-responsive" id="entities" *ngIf="ponudes && ponudes.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr>
-          <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.sifraPostupka">Sifra Postupka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.sifraPonude">Sifra Ponude</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.brojPartije">Broj Partije</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.nazivPonudjaca">Naziv Ponudjaca</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.nazivProizvodjaca">Naziv Proizvodjaca</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.zastceniNaziv">Zastceni Naziv</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.ponudjenaVrijednost">Ponudjena Vrijednost</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.ponude.rokIsporuke">Rok Isporuke</span></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let ponude of ponudes; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/ponude', ponude.id, 'view']">{{ ponude.id }}</a>
-          </td>
-          <td>{{ ponude.sifraPostupka }}</td>
-          <td>{{ ponude.sifraPonude }}</td>
-          <td>{{ ponude.brojPartije }}</td>
-          <td>{{ ponude.nazivPonudjaca }}</td>
-          <td>{{ ponude.nazivProizvodjaca }}</td>
-          <td>{{ ponude.zastceniNaziv }}</td>
-          <td>{{ ponude.ponudjenaVrijednost }}</td>
-          <td>{{ ponude.rokIsporuke }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button type="submit" [routerLink]="['/ponude', ponude.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button type="submit" [routerLink]="['/ponude', ponude.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(ponude)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="sifra postupka">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
+      <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="sifra ponude">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Ponude</th>
+      <td mat-cell *matCellDef="let element">{{ element.sifraPonude }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="broj partije">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Partije</th>
+      <td mat-cell *matCellDef="let element">{{ element.brojPartije }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="naziv ponudjaca">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjac</th>
+      <td mat-cell *matCellDef="let element">{{ element.nazivPonudjaca }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="naziv proizvodjaca">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Proizvodjac</th>
+      <td mat-cell *matCellDef="let element">{{ element.nazivProizvodjaca }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="zasticeni naziv">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Zasticeni Naziv</th>
+      <td mat-cell *matCellDef="let element">{{ element.zastceniNaziv }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="ponudjena vrijednost">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
+      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost | currency }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() | currency }}</td>
+    </ng-container>
+    <ng-container matColumnDef="rok isporuke">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
+      <td mat-cell *matCellDef="let element">{{ element.rokIsporuke }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
