--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -1,86 +1,53 @@
-<div>
-  <h2 id="page-heading" data-cy="PostupciHeading">
-    <span jhiTranslate="tenderiApp.postupci.home.title">Postupcis</span>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="tenderiApp.postupci.home.refreshListLabel">Refresh List</span>
-      </button>
+<mat-form-field fxFlex="40%">
+  <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+</mat-form-field>
 
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-postupci"
-        [routerLink]="['/postupci/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="tenderiApp.postupci.home.createLabel"> Create a new Postupci </span>
-      </button>
-    </div>
-  </h2>
+<div class="example-container mat-elevation-z8">
+  <table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
+    <table id="moj" class="table table-bordered">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="sifra postupka">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
+        <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="broj tendera">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Tendera</th>
+        <td mat-cell *matCellDef="let element">{{ element.brojTendera }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-  <jhi-alert-error></jhi-alert-error>
+      <ng-container matColumnDef="opis postupka">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis Postupka</th>
+        <td mat-cell *matCellDef="let element">{{ element.opisPostupka }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="vrsta postupka">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Vrsta Postupka</th>
+        <td mat-cell *matCellDef="let element">{{ element.vrstaPostupka }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="datum objave">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum Objave</th>
+        <td mat-cell *matCellDef="let element">{{ element.datumObjave }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-  <jhi-alert></jhi-alert>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
 
-  <div class="alert alert-warning" id="no-result" *ngIf="postupcis?.length === 0">
-    <span jhiTranslate="tenderiApp.postupci.home.notFound">No postupcis found</span>
-  </div>
-
-  <div class="table-responsive" id="entities" *ngIf="postupcis && postupcis.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr>
-          <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.postupci.sifraPostupka">Sifra Postupka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.postupci.brojTendera">Broj Tendera</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.postupci.opisPostupka">Opis Postupka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.postupci.vrstaPostupka">Vrsta Postupka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.postupci.datumObjave">Datum Objave</span></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let postupci of postupcis; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/postupci', postupci.id, 'view']">{{ postupci.id }}</a>
-          </td>
-          <td>{{ postupci.sifraPostupka }}</td>
-          <td>{{ postupci.brojTendera }}</td>
-          <td>{{ postupci.opisPostupka }}</td>
-          <td>{{ postupci.vrstaPostupka }}</td>
-          <td>{{ postupci.datumObjave | formatMediumDate }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/postupci', postupci.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button
-                type="submit"
-                [routerLink]="['/postupci', postupci.id, 'edit']"
-                class="btn btn-primary btn-sm"
-                data-cy="entityEditButton"
-              >
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(postupci)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" [routerLink]="['/ponude', row.id, 'view']"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
     </table>
-  </div>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
