--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,13 +1,44 @@
-<jhi-page-ribbon></jhi-page-ribbon>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-<div>
-  <router-outlet name="navbar"></router-outlet>
-</div>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav mode="side" #start #close>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/">
+        <!--        <mat-icon>library_books</mat-icon>-->
+        <span></span>
+      </a>
 
-<div class="container-fluid">
-  <div class="card jh-card">
-    <router-outlet></router-outlet>
+      <a mat-list-item routerLink="postupci">
+        <mat-icon>question_answer</mat-icon>
+        <span>Postupci</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="start.open('mouse')">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-icon-button (click)="start.close()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-icon-button routerLink="/login">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+
+    <button mat-icon-button (click)="logout()">
+      <mat-icon>account_box</mat-icon>
+    </button>
+  </mat-toolbar>
+  <div class="container-fluid">
+    <div class="card jh-card">
+      <router-outlet></router-outlet>
+    </div>
+
+    <jhi-footer></jhi-footer>
   </div>
-
-  <jhi-footer></jhi-footer>
-</div>
+</mat-sidenav-container>
