--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -5,7 +5,7 @@
 </head>
 
 <mat-sidenav-container fullscreen>
-  <mat-sidenav mode="side" #start #close>
+  <mat-sidenav mode="side" #start #close #snav>
     <mat-nav-list>
       <a mat-list-item routerLink="/">
         <!--        <mat-icon>library_books</mat-icon>-->
@@ -20,10 +20,7 @@
   </mat-sidenav>
 
   <mat-toolbar color="primary">
-    <button mat-icon-button (click)="start.open('mouse')">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <button mat-icon-button (click)="start.close()">
+    <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
     <button mat-icon-button routerLink="/login">
