--- a/src/main/webapp/app/entities/postupci/list/postupci.component.scss
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.scss
@@ -1,6 +1,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 #drasko:hover {
-  background-color: yellow;
+  background-color: orange;
 }
 tr {
   cursor: pointer;
