--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -45,7 +45,12 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
 
-      <tr mat-row id="drasko" *matRowDef="let row; columns: displayedColumns" [routerLink]="['/tenderi', { foo: row.sifraPostupka }]"></tr>
+      <tr
+        mat-row
+        id="drasko"
+        *matRowDef="let row; columns: displayedColumns"
+        [routerLink]="['/tenderi-home', { foo: row.sifraPostupka }]"
+      ></tr>
       <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
     </table>
   </table>
