--- a/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
+++ b/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
@@ -1,7 +1,7 @@
 {{ sifra }}
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Ponude">
-    <!--    <jhi-ponude [postupak]="sifra"></jhi-ponude>-->
+    <jhi-ponude [postupak]="sifra"></jhi-ponude>
   </mat-tab>
   <mat-tab label="Second">Content 2</mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
