--- a/src/main/webapp/app/layouts/main/main.component.scss
+++ b/src/main/webapp/app/layouts/main/main.component.scss
@@ -1,1 +1,33 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+
+.mat-toolbar {
+  background: black;
+  color: #fff
+}
+#proba{
+   display: flex;
+  justify-content: flex-end;
+
+  padding: 10px;
+  margin-left: 95%;
+}
+.menu{
+  display:flex;
+  justify-content: flex-start;
+}
+.login{
+  display: flex;
+  justify-content: flex-start;
+
+}
+.logout{
+  display: flex;
+  justify-content: flex-start;
+}
+.filler {
+  flex: 1 1 auto;
+}
+.gap {
+  margin-right: 10px;
+}
