--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -19,25 +19,20 @@
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-toolbar  >
-    <button class="menu "mat-icon-button (click)="snav.toggle()">
+  <mat-toolbar>
+    <button class="menu" mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
     <div id="proba">
-    <button class="login" mat-icon-button routerLink="/login">
-      <mat-icon>account_circle</mat-icon>
-    </button>
+      <button class="login" mat-icon-button routerLink="/login">
+        <mat-icon>power_settings_new</mat-icon>
+      </button>
 
-    <button   class="logout" mat-icon-button (click)="logout()">
-      <mat-icon>account_box</mat-icon>
-    </button>
+      <button class="logout" mat-icon-button (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+      </button>
     </div>
-    <span class = "gap">File</span>
-    <span>Edit</span>
-    <span class = "filler"></span>
-    <span>About</span>
   </mat-toolbar>
-
 
   <div class="container-fluid">
     <div class="card jh-card">
