--- a/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.scss
+++ b/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.scss
@@ -14,3 +14,8 @@ tr.mat-footer-row {
 tr mat-row {
   font-weight: bold;
 }
+.trazi {
+  display: grid;
+  justify-content: center;
+  color: grey;
+}
