--- a/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
+++ b/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
@@ -3,7 +3,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
-
+<div class="trazi">
+  <mat-form-field fxFlex="40%">
+    <mat-label>Leave a comment</mat-label>
+    <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+  </mat-form-field>
+</div>
 <button
   mat-raised-button
   (click)="exporter.exportTable('xlsx', { fileName: 'Prvorangirani', sheet: 'sheet_prvorangirani', Props: { Author: 'Draskoa' } })"
@@ -11,12 +16,6 @@
   <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
 </button>
 <div class="example-container mat-elevation-z8">
-  <div>
-    <mat-form-field fxFlex="40%">
-      <input #box matInput type="text" (keyup)="doFilter(box.value)" />
-    </mat-form-field>
-  </div>
-
   <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
