--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -15,11 +15,11 @@
   <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
 </button>
 <div class="example-container mat-elevation-z8">
-  <div>
-    <mat-form-field fxFlex="40%">
-      <input #box matInput type="text" (keyup)="doFilter(box.value)" />
-    </mat-form-field>
-  </div>
+  <!--  <div>-->
+  <!--    <mat-form-field fxFlex="40%">-->
+  <!--      <input #box matInput type="text" (keyup)="doFilter(box.value)" />-->
+  <!--    </mat-form-field>-->
+  <!--  </div>-->
 
   <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
     <ng-container matColumnDef="id">
