--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -1,94 +1,76 @@
-<div>
-  <h2 id="page-heading" data-cy="SpecifikacijeHeading">
-    <span jhiTranslate="tenderiApp.specifikacije.home.title">Specifikacijes</span>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="tenderiApp.specifikacije.home.refreshListLabel">Refresh List</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-specifikacije"
-        [routerLink]="['/specifikacije/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="tenderiApp.specifikacije.home.createLabel"> Create a new Specifikacije </span>
-      </button>
-    </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="specifikacijes?.length === 0">
-    <span jhiTranslate="tenderiApp.specifikacije.home.notFound">No specifikacijes found</span>
+<button mat-raised-button (click)="exporter.exportTable('xlsx', { fileName: 'Ponude', sheet: 'sheet_name', Props: { Author: 'Talha' } })">
+  <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
+</button>
+<div class="example-container mat-elevation-z8">
+  <div>
+    <mat-form-field fxFlex="40%">
+      <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+    </mat-form-field>
   </div>
 
-  <div class="table-responsive" id="entities" *ngIf="specifikacijes && specifikacijes.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr>
-          <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.sifraPostupka">Sifra Postupka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.brojPartije">Broj Partije</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.atc">Atc</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.inn">Inn</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.farmaceutskiOblikLijeka">Farmaceutski Oblik Lijeka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.jacinaLijeka">Jacina Lijeka</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.trazenaKolicina">Trazena Kolicina</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.pakovanje">Pakovanje</span></th>
-          <th scope="col"><span jhiTranslate="tenderiApp.specifikacije.procijenjenaVrijednost">Procijenjena Vrijednost</span></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let specifikacije of specifikacijes; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/specifikacije', specifikacije.id, 'view']">{{ specifikacije.id }}</a>
-          </td>
-          <td>{{ specifikacije.sifraPostupka }}</td>
-          <td>{{ specifikacije.brojPartije }}</td>
-          <td>{{ specifikacije.atc }}</td>
-          <td>{{ specifikacije.inn }}</td>
-          <td>{{ specifikacije.farmaceutskiOblikLijeka }}</td>
-          <td>{{ specifikacije.jacinaLijeka }}</td>
-          <td>{{ specifikacije.trazenaKolicina }}</td>
-          <td>{{ specifikacije.pakovanje }}</td>
-          <td>{{ specifikacije.procijenjenaVrijednost }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/specifikacije', specifikacije.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button
-                type="submit"
-                [routerLink]="['/specifikacije', specifikacije.id, 'edit']"
-                class="btn btn-primary btn-sm"
-                data-cy="entityEditButton"
-              >
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(specifikacije)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="sifra postupka">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
+      <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="sifra ponude">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Ponude</th>
+      <td mat-cell *matCellDef="let element">{{ element.sifraPonude }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="broj partije">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Partije</th>
+      <td mat-cell *matCellDef="let element">{{ element.brojPartije }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="atc">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Atc</th>
+      <td mat-cell *matCellDef="let element">{{ element.atc }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="inn">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>INN</th>
+      <td mat-cell *matCellDef="let element">{{ element.inn }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="farmaceutski oblik">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Farmaceutski Oblik</th>
+      <td mat-cell *matCellDef="let element">{{ element.farmaceutskiOblikLijeka }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="jacina lijeka">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Jacina Lijeka</th>
+      <td mat-cell *matCellDef="let element">{{ element.jacinaLijeka }}</td>
+    </ng-container>
+    <ng-container matColumnDef="kolicina">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Kolicina</th>
+      <td mat-cell *matCellDef="let element">{{ element.trazenaKolicina }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <ng-container matColumnDef="pakovanje">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pakovanje</th>
+      <td mat-cell *matCellDef="let element">{{ element.pakovanje }}</td>
+    </ng-container>
+    <ng-container matColumnDef="procijenjena vrijednost">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Procijenjena Vrijednost</th>
+      <td mat-cell *matCellDef="let element">{{ element.procijenjenaVrijednost }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
