--- a/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
+++ b/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
@@ -3,6 +3,17 @@
   <mat-tab label="Ponude">
     <jhi-ponude [postupak]="sifra"></jhi-ponude>
   </mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+  <mat-tab label="Bodovanje">
+    <jhi-view-vrednovanje [postupak]="sifra"></jhi-view-vrednovanje>
+  </mat-tab>
+  <mat-tab label="Prvorangirani">
+    <jhi-prvorangirani [postupak]="sifra"></jhi-prvorangirani>
+  </mat-tab>
+
+  <mat-tab label="Nedostaju">
+    <jhi-hvale-ponude [postupak]="sifra"></jhi-hvale-ponude>
+  </mat-tab>
+  <mat-tab label="Specifikacije">
+    <!--      <jhi-specifikacije [postupak]="sifra"></jhi-specifikacije>-->
+  </mat-tab>
 </mat-tab-group>
