--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -4,9 +4,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
-<mat-form-field fxFlex="40%">
-  <input #box matInput type="text" (keyup)="doFilter(box.value)" />
-</mat-form-field>
+<!--<mat-form-field fxFlex="40%">-->
+<!--  <input #box matInput type="text" (keyup)="doFilter(box.value)" />-->
+<!--</mat-form-field>-->
 
 <div class="example-container mat-elevation-z8">
   <table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
