--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -52,8 +52,8 @@
     </ng-container>
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost | currency }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() | currency }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() }}</td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
