--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -10,12 +10,7 @@
 
 <div class="example-container mat-elevation-z8">
   <table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
-    <table id="moj" class="table table-bordered">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
+
       <ng-container matColumnDef="sifra postupka">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
         <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
@@ -45,14 +40,12 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
 
-      <tr
-        mat-row
-        id="drasko"
+      <tr mat-row
         *matRowDef="let row; columns: displayedColumns"
         [routerLink]="['/tenderi-home', { foo: row.sifraPostupka }]"
       ></tr>
       <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
     </table>
-  </table>
+
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
