--- a/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
+++ b/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
@@ -20,6 +20,7 @@
 >
   <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
 </button>
+
 <div class="example-container mat-elevation-z8">
   <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
     <ng-container matColumnDef="id">
@@ -57,7 +58,7 @@
       <td mat-cell *matCellDef="let element">{{ element.zastceniNaziv }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
-    <ng-container matColumnDef="farmaceutski oblik">
+    <ng-container  matColumnDef="farmaceutski oblik">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Farmaceutski oblik</th>
       <td mat-cell *matCellDef="let element">{{ element.farmaceutskiOblikLijeka }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
@@ -83,7 +84,7 @@
     </ng-container>
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost | currency }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
