--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -37,9 +37,8 @@
         <td mat-cell *matCellDef="let element">{{ element.datumObjave }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
-
+       <td mat-footer-cell *matFooterCellDef></td>
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-
       <tr mat-row
         *matRowDef="let row; columns: displayedColumns"
         [routerLink]="['/tenderi-home', { foo: row.sifraPostupka }]"
