--- a/src/main/webapp/app/entities/postupci/list/postupci.component.scss
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-#drasko:hover {
+tr.mat-row:hover {
   background-color: orange;
 }
 tr {
