--- a/src/main/webapp/app/entities/postupci/list/postupci.component.scss
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.scss
@@ -16,6 +16,9 @@ tr.mat-footer-row {
 tr mat-row {
   font-weight: bold;
 }
-#delete{
- color: red;
+#delete {
+  color: red;
+}
+#edit {
+  color: green;
 }
