--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -52,6 +52,12 @@
       <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
     </td>
   </ng-container>
+  <ng-container matColumnDef="edit" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="edit" type="submit" [routerLink]="['/postupci', element.id, 'edit']">edit</mat-icon>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
