--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -60,6 +60,18 @@
       <td mat-cell *matCellDef="let element">{{ element.rokIsporuke }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
+    <!--    <ng-container matColumnDef="delete" stickyEnd>-->
+    <!--      <th mat-header-cell *matHeaderCellDef></th>-->
+    <!--      <td mat-cell *matCellDef="let element">-->
+    <!--        <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>-->
+    <!--      </td>-->
+    <!--    </ng-container>-->
+    <!--    <ng-container matColumnDef="edit" stickyEnd>-->
+    <!--      <th mat-header-cell *matHeaderCellDef></th>-->
+    <!--      <td mat-cell *matCellDef="let element">-->
+    <!--        <mat-icon id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>-->
+    <!--      </td>-->
+    <!--    </ng-container>-->
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
