--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -5,5 +5,7 @@
         >You are logged in as user "{{ account.login }}".</span
       >
     </div>
+
+    <img src="../../content/images/pharmacy.png" />
   </div>
 </div>
