--- a/src/main/webapp/app/login/login.component.scss
+++ b/src/main/webapp/app/login/login.component.scss
@@ -1,4 +1,9 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 .example-card {
-  max-width: 700px;
-  height: 499px;
+  width: 500px;
+  height: 500px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 300px;
+  margin-right: 100px;
 }
