--- a/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
+++ b/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<mat-card class="example-container mat-elevation-z20">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
       <h2 id="jhi-ponude-heading" data-cy="PonudeCreateUpdateHeading" jhiTranslate="tenderiApp.ponude.home.createOrEditLabel">
@@ -235,4 +235,4 @@
       </div>
     </form>
   </div>
-</div>
+</mat-card>
