--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -37,7 +37,7 @@
     </div>
   </mat-toolbar>
 
-  <div class="container-fluid">
+  <div class="main">
     <router-outlet></router-outlet>
 
     <jhi-footer></jhi-footer>
