--- a/src/main/webapp/app/layouts/main/main.component.scss
+++ b/src/main/webapp/app/layouts/main/main.component.scss
@@ -28,10 +28,12 @@
 .gap {
   margin-right: 10px;
 }
-.course-card {
-  margin: 20px 10px;
-}
 
 .course-actions {
   text-align: center;
+}
+.main {
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
