--- a/src/main/webapp/app/login/login.component.scss
+++ b/src/main/webapp/app/login/login.component.scss
@@ -1,9 +1,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-.example-card {
-  width: 500px;
-  height: 500px;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 300px;
-  margin-right: 100px;
+.example-container mat-elevation-z20 {
+}
+.course-card {
+  margin: 20px 10px 20px 20px;
 }
