--- a/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
+++ b/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-container mat-elevation-z20">
+<mat-card class="example-container mat-elevation-z24" style="margin-top: 20px; margin-left: 40px; margin-right: 40px">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
       <h2 id="jhi-ponude-heading" data-cy="PonudeCreateUpdateHeading" jhiTranslate="tenderiApp.ponude.home.createOrEditLabel">
