--- a/src/main/webapp/app/layouts/main/main.component.scss
+++ b/src/main/webapp/app/layouts/main/main.component.scss
@@ -33,7 +33,7 @@
   text-align: center;
 }
 .main {
-  margin-top: 20px;
-  margin-left: 40px;
-  margin-right: 40px;
+  //margin-top: 20px;
+  //margin-left: 40px;
+  //margin-right: 40px;
 }
