--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,4 +1,7 @@
-<mat-card class="example-container mat-elevation-z20">
+<mat-card
+  class="example-container mat-elevation-z24"
+  style="margin-top: 40px; margin-left: 500px; margin-right: 500px; margin-bottom: 70px"
+>
   <h3 jhiTranslate="login.title" data-cy="loginTitle">Sign in</h3>
   <div class="alert alert-danger" *ngIf="authenticationError" jhiTranslate="login.messages.error.authentication" data-cy="loginError">
     <strong>Failed to sign in!</strong> Please check your credentials and try again.
