--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -9,7 +9,7 @@
 <!--</mat-form-field>-->
 
 <!--<div class="example-container mat-elevation-z8">-->
-<mat-card class="example-container mat-elevation-z24">
+<mat-card class="example-container mat-elevation-z24" style="margin-top: 20px; margin-left: 20px; margin-right: 20px; margin-bottom: 20px">
   <button
     id="jh-create-entity"
     data-cy="entityCreateButton"
