--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,13 +1,15 @@
-<!--<mat-card class="example-card">-->
-<div class="row">
-  <div [ngSwitch]="isAuthenticated()">
-    <div class="alert alert-success" *ngSwitchCase="true">
-      <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }"
-        >You are logged in as user "{{ account.login }}".</span
-      >
-    </div>
+<mat-card class="example-container mat-elevation-z24" style="margin-top: 20px; margin-left: 20px; margin-right: 20px; margin-bottom: 20px">
+  <div class="row">
+    <div [ngSwitch]="isAuthenticated()">
+      <div class="alert alert-success" *ngSwitchCase="true">
+        <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }"
+          >You are logged in as user "{{ account.login }}".</span
+        >
+      </div>
 
-    <!--      <img src="../../content/images/pharmacy.png" />-->
+      <img src="../../content/images/pharmacy.png" />
+    </div>
   </div>
-</div>
+</mat-card>
+
 <!--</mat-card>-->
