--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -83,7 +83,7 @@
     </ng-container>
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost | currency }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
