--- a/src/main/webapp/app/entities/prvorangirani/detail/prvorangirani-detail.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/detail/prvorangirani-detail.component.html
@@ -61,7 +61,7 @@
         </dd>
         <dt><span jhiTranslate="tenderiApp.prvorangirani.ponudjenaJedinicnaCijena">Ponudjena Jedinicna Cijena</span></dt>
         <dd>
-          <span>{{ prvorangirani.ponudjenaJedinicnaCijena }}</span>
+          <span>{{ prvorangirani.ponudjenaVrijednost }}</span>
         </dd>
 
         <dt><span jhiTranslate="tenderiApp.prvorangirani.rokIsporuke">Rok Isporuke</span></dt>
