--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -3,11 +3,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
+<div>
+  <mat-form-field fxFlex="40%">
+    <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+  </mat-form-field>
+</div>
 
-<!--<input type="text" class="form-control" [(ngModel)]="sifraPostupka" id="artikal" name="artikal" placeholder="postupak" />-->
-<!--<button class="input-group-append btn btn-info" (click)="getAllPrvorangiraniPostupak()">-->
-<!--  <fa-icon icon="search"></fa-icon>-->
-<!--</button>-->
 <button
   mat-raised-button
   (click)="exporter.exportTable('xlsx', { fileName: 'Prvorangirani', sheet: 'sheet_prvorangirani', Props: { Author: 'Draskoa' } })"
@@ -84,7 +85,7 @@
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
       <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
+      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() }}</td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
