--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -37,7 +37,7 @@
     </button>
     <div class="container">
       <div [hidden]="!isAuthenticated()" class="container-item">
-        <h4>prijavljeni ste kao: {{ account?.login }}</h4>
+        <p>prijavljeni ste kao: {{ account?.login }}</p>
       </div>
     </div>
   </mat-toolbar>
