--- a/src/main/webapp/app/layouts/main/main.component.scss
+++ b/src/main/webapp/app/layouts/main/main.component.scss
@@ -32,9 +32,9 @@
   justify-content: flex-end;
 }
 .container-item {
-  font-size: 2px;
-  font-family: Arial;
-  font-style: italic;
   color: white;
-  margin-right: 10px;
+  margin-right: 5px;
+  font-size: 0.95rem;
+  text-align: center;
+  margin-top: 10px;
 }
