--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.scss
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.scss
@@ -14,3 +14,14 @@ tr.mat-footer-row {
 tr mat-row {
   font-weight: bold;
 }
+
+.container-search {
+  display: flex;
+
+  justify-content: flex-end;
+}
+.search-item {
+  margin-top: 10px;
+
+  width: 260px;
+}
