--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -7,6 +7,11 @@
       <!--        >-->
       <!--      </div>-->
 
+      <mat-form-field class="example-full-width">
+        <mat-label>Leave a comment</mat-label>
+        <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+      </mat-form-field>
+
       <img src="../../content/images/pharmacy.png" />
     </div>
   </div>
