--- a/src/main/webapp/app/entities/postupci/update/postupci-update.component.html
+++ b/src/main/webapp/app/entities/postupci/update/postupci-update.component.html
@@ -1,151 +1,161 @@
-<div class="row justify-content-center">
-  <div class="col-8">
-    <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-postupci-heading" data-cy="PostupciCreateUpdateHeading" jhiTranslate="tenderiApp.postupci.home.createOrEditLabel">
-        Create or edit a Postupci
-      </h2>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-      <div>
-        <jhi-alert-error></jhi-alert-error>
+<mat-card id="drasko" class="example-container mat-elevation-z24">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
+        <h2 id="jhi-postupci-heading" data-cy="PostupciCreateUpdateHeading" jhiTranslate="tenderiApp.postupci.home.createOrEditLabel">
+          Create or edit a Postupci
+        </h2>
 
-        <div class="form-group" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-control-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
+        <div>
+          <jhi-alert-error></jhi-alert-error>
 
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="tenderiApp.postupci.sifraPostupka" for="field_sifraPostupka"
-            >Sifra Postupka</label
-          >
-          <input
-            type="number"
-            class="form-control"
-            name="sifraPostupka"
-            id="field_sifraPostupka"
-            data-cy="sifraPostupka"
-            formControlName="sifraPostupka"
-          />
-          <div
-            *ngIf="
-              editForm.get('sifraPostupka')!.invalid && (editForm.get('sifraPostupka')!.dirty || editForm.get('sifraPostupka')!.touched)
-            "
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('sifraPostupka')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-            <small
-              class="form-text text-danger"
-              [hidden]="!editForm.get('sifraPostupka')?.errors?.number"
-              jhiTranslate="entity.validation.number"
-            >
-              This field should be a number.
-            </small>
+          <div class="form-group" [hidden]="editForm.get('id')!.value == null">
+            <label class="form-control-label" jhiTranslate="global.field.id" for="field_id">ID</label>
+            <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="tenderiApp.postupci.brojTendera" for="field_brojTendera">Broj Tendera</label>
-          <input
-            type="text"
-            class="form-control"
-            name="brojTendera"
-            id="field_brojTendera"
-            data-cy="brojTendera"
-            formControlName="brojTendera"
-          />
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="tenderiApp.postupci.opisPostupka" for="field_opisPostupka">Opis Postupka</label>
-          <input
-            type="text"
-            class="form-control"
-            name="opisPostupka"
-            id="field_opisPostupka"
-            data-cy="opisPostupka"
-            formControlName="opisPostupka"
-          />
-          <div
-            *ngIf="editForm.get('opisPostupka')!.invalid && (editForm.get('opisPostupka')!.dirty || editForm.get('opisPostupka')!.touched)"
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('opisPostupka')?.errors?.required"
-              jhiTranslate="entity.validation.required"
+          <div class="form-group">
+            <label class="form-control-label" jhiTranslate="tenderiApp.postupci.sifraPostupka" for="field_sifraPostupka"
+              >Sifra Postupka</label
             >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="tenderiApp.postupci.vrstaPostupka" for="field_vrstaPostupka"
-            >Vrsta Postupka</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            name="vrstaPostupka"
-            id="field_vrstaPostupka"
-            data-cy="vrstaPostupka"
-            formControlName="vrstaPostupka"
-          />
-          <div
-            *ngIf="
-              editForm.get('vrstaPostupka')!.invalid && (editForm.get('vrstaPostupka')!.dirty || editForm.get('vrstaPostupka')!.touched)
-            "
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('vrstaPostupka')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="tenderiApp.postupci.datumObjave" for="field_datumObjave">Datum Objave</label>
-          <div class="input-group">
             <input
-              id="field_datumObjave"
-              data-cy="datumObjave"
+              type="number"
+              class="form-control"
+              name="sifraPostupka"
+              id="field_sifraPostupka"
+              data-cy="sifraPostupka"
+              formControlName="sifraPostupka"
+            />
+            <div
+              *ngIf="
+                editForm.get('sifraPostupka')!.invalid && (editForm.get('sifraPostupka')!.dirty || editForm.get('sifraPostupka')!.touched)
+              "
+            >
+              <small
+                class="form-text text-danger"
+                *ngIf="editForm.get('sifraPostupka')?.errors?.required"
+                jhiTranslate="entity.validation.required"
+              >
+                This field is required.
+              </small>
+              <small
+                class="form-text text-danger"
+                [hidden]="!editForm.get('sifraPostupka')?.errors?.number"
+                jhiTranslate="entity.validation.number"
+              >
+                This field should be a number.
+              </small>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-control-label" jhiTranslate="tenderiApp.postupci.brojTendera" for="field_brojTendera">Broj Tendera</label>
+            <input
               type="text"
               class="form-control"
-              name="datumObjave"
-              ngbDatepicker
-              #datumObjaveDp="ngbDatepicker"
-              formControlName="datumObjave"
+              name="brojTendera"
+              id="field_brojTendera"
+              data-cy="brojTendera"
+              formControlName="brojTendera"
             />
-            <span class="input-group-append">
-              <button type="button" class="btn btn-secondary" (click)="datumObjaveDp.toggle()">
-                <fa-icon icon="calendar-alt"></fa-icon>
-              </button>
-            </span>
+          </div>
+
+          <div class="form-group">
+            <label class="form-control-label" jhiTranslate="tenderiApp.postupci.opisPostupka" for="field_opisPostupka">Opis Postupka</label>
+            <input
+              type="text"
+              class="form-control"
+              name="opisPostupka"
+              id="field_opisPostupka"
+              data-cy="opisPostupka"
+              formControlName="opisPostupka"
+            />
+            <div
+              *ngIf="
+                editForm.get('opisPostupka')!.invalid && (editForm.get('opisPostupka')!.dirty || editForm.get('opisPostupka')!.touched)
+              "
+            >
+              <small
+                class="form-text text-danger"
+                *ngIf="editForm.get('opisPostupka')?.errors?.required"
+                jhiTranslate="entity.validation.required"
+              >
+                This field is required.
+              </small>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-control-label" jhiTranslate="tenderiApp.postupci.vrstaPostupka" for="field_vrstaPostupka"
+              >Vrsta Postupka</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              name="vrstaPostupka"
+              id="field_vrstaPostupka"
+              data-cy="vrstaPostupka"
+              formControlName="vrstaPostupka"
+            />
+            <div
+              *ngIf="
+                editForm.get('vrstaPostupka')!.invalid && (editForm.get('vrstaPostupka')!.dirty || editForm.get('vrstaPostupka')!.touched)
+              "
+            >
+              <small
+                class="form-text text-danger"
+                *ngIf="editForm.get('vrstaPostupka')?.errors?.required"
+                jhiTranslate="entity.validation.required"
+              >
+                This field is required.
+              </small>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-control-label" jhiTranslate="tenderiApp.postupci.datumObjave" for="field_datumObjave">Datum Objave</label>
+            <div class="input-group">
+              <input
+                id="field_datumObjave"
+                data-cy="datumObjave"
+                type="text"
+                class="form-control"
+                name="datumObjave"
+                ngbDatepicker
+                #datumObjaveDp="ngbDatepicker"
+                formControlName="datumObjave"
+              />
+              <span class="input-group-append">
+                <button type="button" class="btn btn-secondary" (click)="datumObjaveDp.toggle()">
+                  <fa-icon icon="calendar-alt"></fa-icon>
+                </button>
+              </span>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div>
-        <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-        </button>
+        <div>
+          <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
+            <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+          </button>
 
-        <button
-          type="submit"
-          id="save-entity"
-          data-cy="entityCreateSaveButton"
-          [disabled]="editForm.invalid || isSaving"
-          class="btn btn-primary"
-        >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-        </button>
-      </div>
-    </form>
+          <button
+            type="submit"
+            id="save-entity"
+            data-cy="entityCreateSaveButton"
+            [disabled]="editForm.invalid || isSaving"
+            class="btn btn-primary"
+          >
+            <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
+</mat-card>
