--- a/src/main/webapp/app/entities/postupci/update/update.postupci.scss
+++ b/src/main/webapp/app/entities/postupci/update/update.postupci.scss
@@ -1,5 +1,4 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
 .example-container mat-elevation-z24 {
-  margin: 20px 100px 40px;
+  margin-right: 200px;
 }
