--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -1,3 +1,19 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 .example-card {
 }
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+mat-card {
+  display: flex;
+}
+#drasko {
+  margin: 20px;
+}
