--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -3,6 +3,17 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
+
+<button
+  *jhiHasAnyAuthority="'ROLE_ADMIN'"
+  id="jh-create-entity"
+  data-cy="entityCreateButton"
+  class="btn btn-primary jh-create-entity create-ponude"
+  [routerLink]="['/ponude/new']"
+>
+  <fa-icon icon="plus"></fa-icon>
+  <span>Nova Ponuda</span>
+</button>
 <mat-card class="example-container mat-elevation-z24">
   <button mat-raised-button (click)="exporter.exportTable('xlsx', { fileName: 'Ponude', sheet: 'sheet_name', Props: { Author: 'Talha' } })">
     <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
@@ -72,13 +83,13 @@
     <ng-container matColumnDef="delete" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
+        <mat-icon *jhiHasAnyAuthority="'ROLE_ADMIN'" id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
       </td>
     </ng-container>
     <ng-container matColumnDef="edit" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>
+        <mat-icon *jhiHasAnyAuthority="'ROLE_ADMIN'" id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>
       </td>
     </ng-container>
 
