--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -4,6 +4,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
+<div class="container-search">
+  <mat-form-field class="search-item" fxFlex="40%">
+    <!--    <mat-label>Nadji</mat-label>-->
+    <input #box matInput type="text" (keyup)="doFilter(box.value)" />
+    <!--    <mat-icon>search</mat-icon>-->
+  </mat-form-field>
+</div>
+
 <button
   *jhiHasAnyAuthority="'ROLE_ADMIN'"
   id="jh-create-entity"
@@ -18,12 +26,6 @@
   <button mat-raised-button (click)="exporter.exportTable('xlsx', { fileName: 'Ponude', sheet: 'sheet_name', Props: { Author: 'Talha' } })">
     <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
   </button>
-
-  <!--  <div>-->
-  <!--    <mat-form-field fxFlex="40%">-->
-  <!--      <input #box matInput type="text" (keyup)="doFilter(box.value)" />-->
-  <!--    </mat-form-field>-->
-  <!--  </div>-->
 
   <table
     class="example-container mat-elevation-z8"
@@ -73,7 +75,7 @@
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
       <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ ukupnaPonudjena | number: '1.2-2' }}</td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
@@ -85,16 +87,19 @@
       <td mat-cell *matCellDef="let element">
         <mat-icon *jhiHasAnyAuthority="'ROLE_ADMIN'" id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
       </td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="edit" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <mat-icon *jhiHasAnyAuthority="'ROLE_ADMIN'" id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>
       </td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </mat-card>
